(library
 (name ood_gen)
 (libraries
  ocamlorg.global
  cmarkit
  yaml
  unix
  ptime
  fmt
  cohttp
  cohttp-lwt-unix
  river
  syndic
  uri
  ppx_show.runtime
  lambdasoup
  fpath
  ppx_stable
  hilite
  typesense
  typesense-cohttp-lwt-unix)
 (preprocess
  (pps ppx_deriving_yaml ppx_stable ppx_show ppx_yojson_conv)))

(rule
 (targets data.ml)
 (deps
  (source_tree %{workspace_root}/data/))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain %{workspace_root}/data -o %{targets}))))
